@@ -470,8 +470,11 @@ class mod_web_dmail extends t3lib_SCbase {
 						}
 					}
 				}
+				if ($this->noView)	{
+					$theOutput = $this->directMail_compactView($row).$theOutput;
+				}
 				$theOutput = $this->directMail_optionsMenu($row, $this->CMD).$theOutput;
-				if (!$this->noView)	{
+				if (!$this->noView)	{			
 					$theOutput .= $this->directMail_defaultView($row);
 				}
 			}
@@ -3859,7 +3862,7 @@ class mod_web_dmail extends t3lib_SCbase {
 		$dmailTitle=t3lib_iconWorks::getIconImage('sys_dmail',$row,$BACK_PATH,'style="vertical-align: top;"').$row['subject'];
 		$out='';
 		$Eparams='&edit[sys_dmail]['.$row['uid'].']=edit';
-		$out .= '<tr><td colspan=3 bgColor="' . $this->doc->bgColor5 . '" valign=top>'.fw($this->fName('subject').' <b>'.t3lib_div::fixed_lgd($row['subject'],30).'  </b>').'</td></tr>';
+		$out .= '<tr><td colspan=3 bgColor="' . $this->doc->bgColor5 . '" valign=top>'.fw($this->fName('subject').' <b>'.t3lib_div::fixed_lgd($row['subject'],60).'  </b>').'</td></tr>';
 		$nameArr = explode(',','from_name,from_email,replyto_name,replyto_email,organisation,return_path,priority,attachment,type,page,sendOptions,includeMedia,flowedFormat,plainParams,HTMLParams,encoding,charset,issent,renderedsize');
 		while(list(,$name)=each($nameArr))	{
 			$out.='<tr><td bgColor="'.$this->doc->bgColor4.'">'.fw($this->fName($name)).'</td><td bgColor="'.$this->doc->bgColor4.'">'.fw(str_replace('Yes', $LANG->getLL('yes'),t3lib_BEfunc::getProcessedValue('sys_dmail',$name,$row[$name]))).'</td></tr>';
@@ -3889,7 +3892,54 @@ class mod_web_dmail extends t3lib_SCbase {
 		
 		return $theOutput;
 	}
-	
+
+	/**
+	 * [Describe function...]
+	 *
+	 * @param	[type]		$row: ...
+	 * @return	[type]		...
+	 */
+	function directMail_compactView($row)	{
+		global $LANG, $BE_USER, $BACK_PATH;
+		
+			// Render record:
+		$dmailTitle = t3lib_iconWorks::getIconImage('sys_dmail',$row,$BACK_PATH,'style="vertical-align: top;"').$row['subject'];
+		if ($row['type'])	{
+			$dmailData = $row['plainParams'].', '.$row['HTMLParams'];
+		} else {
+			$page = t3lib_BEfunc::getRecord('pages',$row['page'],'title');
+			$dmailData = $row['page'].', '.htmlspecialchars($page['title']);
+
+			$dmail_info = $this->fName('plainParams').' '.htmlspecialchars($row['plainParams'].chr(10).$this->fName('HTMLParams').$row['HTMLParams']).'; '.chr(10);
+		}
+		$dmail_info .= $LANG->getLL('view_media').' '.t3lib_BEfunc::getProcessedValue('sys_dmail','includeMedia',$row['includeMedia']).'; '.chr(10).
+			$LANG->getLL('view_flowed').' '.t3lib_BEfunc::getProcessedValue('sys_dmail','flowedFormat',$row['flowedFormat']);
+		$dmail_info = '<img'.t3lib_iconWorks::skinImg($BACK_PATH,'gfx/zoom2.gif','width="12" height="12"').' title="'.$dmail_info.'">';
+
+		$nameArr = explode(',',',attachment,,,issent,renderedsize');
+
+		$from_info = $LANG->getLL('view_replyto').' '.htmlspecialchars($row['replyto_name'].' <'.$row['replyto_email'].'>').'; '.chr(10).
+			$this->fName('organisation').' '.htmlspecialchars($row['organisation']).'; '.chr(10).
+			$this->fName('return_path').' '.htmlspecialchars($row['return_path']);
+		$from_info = '<img'.t3lib_iconWorks::skinImg($BACK_PATH,'gfx/zoom2.gif','width="12" height="12"').' title="'.$from_info.'">';
+
+		$mail_info = $this->fName('priority').' '.t3lib_BEfunc::getProcessedValue('sys_dmail','priority',$row['priority']).'; '.chr(10).
+			$this->fName('encoding').' '.t3lib_BEfunc::getProcessedValue('sys_dmail','encoding',$row['encoding']).'; '.chr(10).
+			$this->fName('charset').' '.t3lib_BEfunc::getProcessedValue('sys_dmail','charset',$row['charset']);
+		$mail_info = '<img'.t3lib_iconWorks::skinImg($BACK_PATH,'gfx/zoom2.gif','width="12" height="12"').' title="'.$mail_info.'">';
+
+		$out = '<table border="0" cellpadding="1" cellspacing="1" width="460">';
+		$out .= '<tr bgColor="'.$this->doc->bgColor4.'"><td>'.$LANG->getLL('view_from').'</td><td>'.htmlspecialchars($row['from_name'].' <'.$row['from_email'].'>').'</td><td>'.$from_info.'</td></tr>';
+		$out .= '<tr bgColor="'.$this->doc->bgColor4.'"><td>'.$LANG->getLL('view_dmail').'</td><td>'.t3lib_BEfunc::getProcessedValue('sys_dmail','type',$row['type']).': '.$dmailData.'</td><td>'.$dmail_info.'</td></tr>';
+		$out .= '<tr bgColor="'.$this->doc->bgColor4.'"><td>'.$LANG->getLL('view_mail').'</td><td>'.t3lib_BEfunc::getProcessedValue('sys_dmail','sendOptions',$row['sendOptions']).($row['attachment']?'; ':'').t3lib_BEfunc::getProcessedValue('sys_dmail','attachment',$row['attachment']).'</td><td>'.$mail_info.'</td></tr>';
+		$out .= '</table>';
+		$out .= $this->doc->spacer(5);
+
+		$theOutput .= $this->doc->section($LANG->getLL('dmail_view').' '.$dmailTitle, $out, 1, 1, 0, TRUE);
+		
+		return $theOutput;
+	}
+
 	/**
 	 * [Describe function...]
 	 *
